--- a/src/containers/checkout/details-form/details-form.module.css
+++ b/src/containers/checkout/details-form/details-form.module.css
@@ -19,7 +19,10 @@
 .contact-details-wrapper {
   border: unset;
   display: flex;
-  align-items: center;
+}
+
+.contact-details-wrapper label {
+  width: 50%;
 }
 
 .cta-wrapper {
