--- a/src/components/ui/button/button.module.css
+++ b/src/components/ui/button/button.module.css
@@ -1,24 +1,133 @@
 .button {
+  --disabled: #0006;
+  /* --variant: #000d; */
+  position: relative;
+  isolation: isolate;
+  color: var(--variant);
   background-color: unset;
   border: unset;
   border-radius: 10px;
-  outline: 2px solid #00000000;
-  outline-offset: 2px;
-  cursor: pointer;
+  overflow: hidden;
+  outline: unset;
   padding: 8px 12px;
-  margin: 12px;
-  font-weight: 700;
-  transition: transform 0.125s ease-in-out;
+  font-weight: 200;
+  box-shadow: 0 10px 24px -4px #0001;
+  transition:
+    transform 0.125s ease-in-out,
+    color 0.1s linear;
 }
 
-.button:active {
+.button .indicator {
+  all: unset;
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  opacity: 0.3;
+  background-color: #fff;
+  border: 1px solid var(--variant);
+  border-radius: inherit;
+  transition: background-color 0.125s ease-in-out;
+}
+
+.button[aria-disabled="true"] {
+  color: var(--disabled-text);
+}
+
+.button:not([aria-disabled="true"]):active {
   transform: translateY(1px);
 }
 
-.success {
-  color: #5c9210;
+.button:focus.red,
+.button:hover.red {
+  --variant: #f44336;
 }
 
-.danger {
-  color: #944317;
+.button:focus.pink,
+.button:hover.pink {
+  --variant: #e91e63;
+}
+
+.button:focus.purple,
+.button:hover.purple {
+  --variant: #9c27b0;
+}
+
+.button:focus.deep-purple,
+.button:hover.deep-purple {
+  --variant: #673ab7;
+}
+
+.button:focus.indigo,
+.button:hover.indigo {
+  --variant: #3f51b5;
+}
+
+.button:focus.blue,
+.button:hover.blue {
+  --variant: #2196f3;
+}
+
+.button:focus.light-blue,
+.button:hover.light-blue {
+  --variant: #03a9f4;
+}
+
+.button:focus.cyan,
+.button:hover.cyan {
+  --variant: #00bcd4;
+}
+
+.button:focus.teal,
+.button:hover.teal {
+  --variant: #009688;
+}
+
+.button:focus.green,
+.button:hover.green {
+  --variant: #4caf50;
+}
+
+.button:focus.light-green,
+.button:hover.light-green {
+  --variant: #8bc34a;
+}
+
+.button:focus.lime,
+.button:hover.lime {
+  --variant: #cddc39;
+}
+
+.button:focus.orange,
+.button:hover.orange {
+  --variant: #ffeb3b;
+}
+
+.button:focus.amber,
+.button:hover.amber {
+  --variant: #ffc107;
+}
+
+.button:focus.yellow,
+.button:hover.yellow {
+  --variant: #ff9800;
+}
+
+.button:focus.deep-orange,
+.button:hover.deep-orange {
+  --variant: #ff5722;
+}
+
+.button:focus.brown,
+.button:hover.brown {
+  --variant: #795548;
+}
+
+.button:focus.grey,
+.button:hover.grey {
+  --variant: #9e9e9e;
+}
+
+.button:focus.blue-grey,
+.button:hover.blue-grey {
+  --variant: #607d8b;
 }
