--- a/src/containers/checkout/details-form/details-form.module.css
+++ b/src/containers/checkout/details-form/details-form.module.css
@@ -26,11 +26,12 @@
 }
 
 .cta-wrapper {
-  margin-block-start: 0.75em;
+  margin: 0.875em 0 0.375em;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 0.75em;
 }
 
 .cta-wrapper button {
