--- a/src/components/order/order.module.css
+++ b/src/components/order/order.module.css
@@ -23,7 +23,8 @@
 }
 
 .contents-wrapper span {
-  padding: 0.1em 0.3em 0.125em;
+  line-height: 0.875;
+  padding: 0.15em 0.3em 0.25em;
   border-radius: 8px;
   border: 1px solid #0006;
 }
