--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=REM:wght@200;400;700&display=swap");
 
 :root {
-  --header-color: #eef1ff;
+  --red-50: #ffebee;
+  --red-100: #ffcdd2;
+  --red-200: #ef9a9a;
+  --red-300: #e57373;
+  --red-400: #ef5350;
+  --red-500: #f44336;
+  --red-600: #e53935;
+  --red-700: #d32f2f;
+  --red-800: #c62828;
+  --red-900: #b71c1c;
+  --indigo-50: #e8eaf6;
+  --indigo-100: #c5cae9;
+  --indigo-200: #9fa8da;
+  --indigo-300: #7986cb;
+  --indigo-400: #5c6bc0;
+  --indigo-500: #3f51b5;
+  --indigo-600: #3949ab;
+  --indigo-700: #303f9f;
+  --indigo-800: #283593;
+  --indigo-900: #1a237e;
+  --grey-50: #fafafa;
+  --grey-100: #f5f5f5;
+  --grey-200: #eeeeee;
+  --grey-300: #e0e0e0;
+  --grey-400: #bdbdbd;
+  --grey-500: #9e9e9e;
+  --grey-600: #757575;
+  --grey-700: #616161;
+  --grey-800: #424242;
+  --grey-900: #212121;
+  --blue-grey-50: #eceff1;
+  --blue-grey-100: #cfd8dc;
+  --blue-grey-200: #b0bec5;
+  --blue-grey-300: #90a4ae;
+  --blue-grey-400: #78909c;
+  --blue-grey-500: #607d8b;
+  --blue-grey-600: #546e7a;
+  --blue-grey-700: #455a64;
+  --blue-grey-800: #37474f;
+  --blue-grey-900: #263238;
   line-height: 1.5;
   font-family: "REM", sans-serif;
   -webkit-font-smoothing: antialiased;
