--- a/src/components/navigation/side-drawer/drawer-toggle/drawer-toggle.module.css
+++ b/src/components/navigation/side-drawer/drawer-toggle/drawer-toggle.module.css
@@ -1,52 +1,15 @@
-.drawer-toggle {
-  background-color: unset;
-  border: unset;
-  width: 32px;
-  aspect-ratio: 1 / 1;
-  display: grid;
-  place-items: center;
+.a {
+	color: #fff;
+	background-color: #0000;
+	border: 0;
 }
 
-.bar {
-  width: 100%;
-  background-color: #fff;
-  height: 3px;
-  border-radius: 1em;
-  position: relative;
-  transition: transform 0.3s ease-in-out;
+.a > svg {
+	width: 24px;
 }
 
-.bar::before,
-.bar::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  inset: -266.66667% auto auto 0;
-  background-color: inherit;
-  border-radius: inherit;
-  transition: inherit;
-}
-
-.bar::after {
-  inset: auto 0 -266.66667% auto;
-}
-
-.drawer-toggle.open .bar {
-  transform: rotate(0.125turn);
-}
-
-.drawer-toggle.open .bar::before {
-  transform: rotate(-0.25turn);
-  top: 0;
-}
-
-.drawer-toggle.open .bar::after {
-  content: none;
-}
-
-@media only screen and (min-width: 768px) {
-  .drawer-toggle {
-    display: none;
-  }
+@media (min-width: 800px) {
+	.a {
+		display: none;
+	}
 }
