--- a/src/components/navigation/side-drawer/side-drawer.module.css
+++ b/src/components/navigation/side-drawer/side-drawer.module.css
@@ -1,37 +1,30 @@
-.side-drawer {
-  position: fixed;
-  max-width: 320px;
-  inset: 0;
-  z-index: 99;
-  color: #c45c1f;
-  background-color: #f57328;
-  padding: 1rem;
-  opacity: 0;
-  transform: translateX(-100%);
-  transition:
-    transform 0.3s ease-in-out,
-    opacity 0.3s ease;
+.a {
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: stretch;
+	gap: 2rem;
+	position: fixed;
+	width: 100%;
+	max-width: 320px;
+	inset: 0 0 0 auto;
+	z-index: 99;
+	color: #fffb;
+	background-color: #f57328;
+	padding: 1rem 1.5rem;
 }
 
-.slide-out {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-.top-section {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 2rem;
+.b {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .logo {
-  max-width: 48px;
+	max-width: 48px;
 }
 
-@media only screen and (min-width: 768px) {
-  .side-drawer {
-    display: none;
-  }
+@media (min-width: 800px) {
+	.side-drawer {
+		display: none;
+	}
 }
